--- a/sdk-5.0/resources/styles.css
+++ b/sdk-5.0/resources/styles.css
@@ -141,7 +141,7 @@
 .statsField {
     x: 50%;
     y: 55%;
-    font-family: Seville-Bold;
+    font-family: System-Bold;
     font-size: 24;
     text-anchor: middle;
 }
@@ -152,7 +152,7 @@
 .hourmarker8text {
     x: 30%;
     y: +21%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
@@ -160,7 +160,7 @@
 .hourmarker16text {
     x: -27%;
     y: +21%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
@@ -168,7 +168,7 @@
 .hourmarker24text {
     x: 0%;
     y: -27%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
@@ -203,7 +203,7 @@
     height: 15;
 }
 .weekDialText {
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
@@ -222,7 +222,7 @@
 .dateText {
     x: 0;
     y: +25%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
     text-length: 4;
@@ -259,35 +259,35 @@
 .hrDial40Text {
     x: -19%;
     y: +30%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
 .hrDial80Text {
     x: -29%;
     y: -5%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
 .hrDial120Text {
     x: 0%;
     y: -27%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
 .hrDial160Text {
     x: 25%;
     y: -5%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
 .hrDial200Text {
     x: 18%;
     y: +30%;
-    font-family: Seville-Regular;
+    font-family: System-Regular;
     font-size: 18;
     text-anchor: middle;
 }
